# thisishappening

./: .env_template  .flake8  Dockerfile  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code_quality.yaml  deploy.yaml
dev/: explore.ipynb
docs/: index.html  terms.html
tests/: data_event.py  test_event.py
thisishappening/: app.py
thisishappening/utils/: cluster_utils.py  data_base.py  data_utils.py  tweet_utils.py
utils/: cluster_utils.py  data_base.py  data_utils.py  tweet_utils.py
