[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "thisishappening"
version = "0.1.0"
description = "Locate, summarize, and visualize geotagged social media activity"
authors = ["Matt Mollison <matt.mollison@gmail.com>"]

[tool.poetry.dependencies]
emoji = "^1.7.0"
ftfy = "^6.1.1"
geopy = "^2.2.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
pytz = "^2022.1"
python = ">=3.10,<3.11"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
spacy = "^3.3.1"
sqlalchemy = "^1.4.39"
twython = "^3.9.1"
unidecode = "^1.3.4"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
folium = "^0.12.1.post1"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
