[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "thisishappening"
version = "0.1.0"
description = "Locate, summarize, and visualize geotagged social media activity"
authors = ["Matt Mollison <matt.mollison@gmail.com>"]

[tool.poetry.dependencies]
emoji = "^2.1.0"
ftfy = "^6.1.1"
geopy = "^2.2.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"
pytz = "^2022.2.1"
python = ">=3.10,<3.11"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
spacy = "^3.4.1"
sqlalchemy = "^1.4.41"
twython = "^3.9.1"
unidecode = "^1.3.4"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"
folium = "^0.12.1.post1"
jupyterlab = "^3.4.7"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
