[tool.poetry]
name = "thisishappening"
version = "0.1.0"
description = "Locate, summarize, and visualize geotagged social media activity"
authors = ["Matt Mollison <matt.mollison@gmail.com>"]

[tool.poetry.dependencies]
emoji = "^2.2.0"
ftfy = "^6.1.1"
geopy = "^2.3.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
python = ">=3.10,<3.11"
scikit-learn = "^1.2.1"
scipy = "^1.10.0"
spacy = "^3.5.0"
sqlalchemy = "^1.4.46"
tenacity = "^8.2.1"
twython = "^3.9.1"
unidecode = "^1.3.6"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipdb = "^0.13.11"
mypy = "^0.991"
pytest = "^7.2.1"
ruff = "^0.0.247"
folium = "^0.14.0"
jupyterlab = "^3.6.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true

[tool.ruff]
# Same as Black
line-length = 88

# Assume Python 3.10
target-version = "py310"

# Checks to enable
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # McCabe complexity
    "C90",
    # isort
    "I",
    # pandas-vet
    "PD",
    # pep8-naming
    "N",
    # flake8-quotes
    "Q",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # Ruff-specific rules
    "RUF",
    # flake8-datetimez
    "DTZ",
    # # flake8-builtins
    # "A",
    # # pydocstyle
    # "D",
    # # flake8-logging-format
    # "G",
    # # flake8-use-pathlib
    # "PTH",
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["F", "E", "W", "B", "C4", "I", "PD", "N", "Q", "SIM", "UP", "RUF", "DTZ"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 26
